--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Google Swift Style Guide
+title: Google Swift Style Guide 中文版
 description: > # > means to ignore newlines until the next unindented line
   Google's Swift style guide.
 timezone: America/Los_Angeles
-baseurl: "/swift"
-url: "https://google.github.io/swift"
+baseurl: "/google-swift-style-guide-in-chinese"
+url: "http://stage.swift.gg/google-swift-style-guide-in-chinese/"
 
 exclude: [config.ru, Gemfile, Gemfile.lock, Procfile, vendor, README.md]
 
